--- a/HTML_gK/style.css
+++ b/HTML_gK/style.css
@@ -62,6 +62,26 @@ p{
 	clear:both;
 }
 
+#criadores{
+	background-image:url('criadores.png');
+	background-size:70%;
+	min-height:500px;
+	padding:10px;
+	clear:both;
+}
+
+#fale_conosco{
+	/*Safari,Chrome*/
+	background-image:-webkit-linear-gradient(white,#35b8b0);
+	/*Firefox*/
+	background-image:-moz-linear-gradient(white,#35b8b0);
+	/*Opera*/
+	background-image:-o-linear-gradient(white,#35b8b0);
+	min-height:500px;
+	padding:10px;
+	clear:both;
+}
+
 #Gustavo{
 	/*Safari,Chrome*/
 	background-image:-webkit-linear-gradient(red,white);
@@ -127,7 +147,7 @@ p{
 
 #menu a:hover{
 	background-color:#35b8b0;
-	-webkit-transition:1s;
+	-webkit-transition:0.5s;
 }
 
 /*Class*/
@@ -142,6 +162,13 @@ p{
 	border-radius:20px;
 }
 
+.envio{
+	background-color:rgba(0,0,0,0.3);
+	padding:20px;
+	border-radius:20px;
+	color:white;
+}
+	
 /*PHP*/
 span.texto{
 				font-size:<?php echo $tam;?>;
